# Qt-Inspector

./: CMakeLists.txt  DirectObjectProxy.cpp  DirectObjectProxy.h  DirectWidgetPicker.cpp  ExternalObjectProxy.cpp  ExternalObjectProxy.h  ExternalWidgetPicker.cpp  ExternalWidgetPicker.h  GdbLibraryInjector.cpp  GdbLibraryInjector.h  Injector.cpp  Injector.h  InspectorServer.cpp  InspectorServer.h  MessageReader.cpp  MessageReader.h  MessageWriter.cpp  MessageWriter.h  NetstringReader.cpp  NetstringWriter.h  ObjectFilter.cpp  ObjectFilter.h  ObjectIdMap.cpp  ObjectIdMap.h  ObjectInspector.cpp  ObjectInspector.h  ObjectPropertyModel.cpp  ObjectPropertyModel.h  ObjectProxy.h  ObjectTreeModel.cpp  ObjectTreeModel.h  OutOfProcessClipboard.cpp  OutOfProcessClipboard.h  PreloadInjector.cpp  PreloadInjector.h  README  README.md  RootObjectList.h  TargetApplicationProxy.cpp  TargetApplicationProxy.h  (+13 more)
lib/: CMakeLists.txt  DirectObjectProxy.cpp  DirectObjectProxy.h  DirectWidgetPicker.cpp  DirectWidgetPicker.h  InspectorServer.cpp  InspectorServer.h  NetstringReader.h  NetstringWriter.cpp  NetstringWriter.h  ObjectIdMap.h  ObjectProxy.h  PlatformUtils.cpp  PlatformUtils.h  StartupHelper.cpp  StartupHelper.h  VariantSerializer.h  WidgetPicker.h  inspector.proto  libmain.cpp
